small layout changes

--- a/app/src/main/res/layout/activity_student_solutions.xml
+++ b/app/src/main/res/layout/activity_student_solutions.xml
@@ -62,7 +62,7 @@
                 android:text="CEU33E04 Innovation and Entrepreneurship for Engineers"
                 android:textSize="16dp"
                 android:onClick="btn_action"
-                android:textStyle="bold|italic" />
+                android:textStyle="bold" />
             <TextView
                 android:id="@+id/m2"
                 android:layout_width="match_parent"
@@ -70,8 +70,9 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
                 android:text="CSU33D01 Computer Networks"
-                android:textSize="18sp"
-                android:textStyle="bold|italic" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+ />
             <TextView
                 android:id="@+id/m3"
                 android:layout_width="match_parent"
@@ -79,8 +80,9 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
                 android:text="CSU33D02 Microprocessor Systems I"
-                android:textSize="18sp"
-                android:textStyle="bold|italic" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+/>
             <TextView
                 android:id="@+id/m4"
                 android:layout_width="match_parent"
@@ -88,8 +90,9 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
                 android:text="CSU33D03 Microprocessor Systems II"
-                android:textSize="18sp"
-                android:textStyle="bold|italic" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+ />
             <TextView
                 android:id="@+id/m5"
                 android:layout_width="match_parent"
@@ -97,8 +100,9 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
                 android:text="CSU33D04 Data Structures"
-                android:textSize="18sp"
-                android:textStyle="bold|italic" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+ />
             <TextView
                 android:id="@+id/m6"
                 android:layout_width="match_parent"
@@ -106,8 +110,9 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
                 android:text="CSU33D06 Software Design Analysis"
-                android:textSize="18sp"
-                android:textStyle="bold|italic" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+ />
             <TextView
                 android:id="@+id/m7"
                 android:layout_width="match_parent"
@@ -115,8 +120,9 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
                 android:text="EEU33C01 Signals and Systems"
-                android:textSize="18sp"
-                android:textStyle="bold|italic" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+ />
             <TextView
                 android:id="@+id/m8"
                 android:layout_width="match_parent"
@@ -124,8 +130,9 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
                 android:text="EEU33C02 Digital Circuits"
-                android:textSize="18sp"
-                android:textStyle="bold|italic" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+ />
             <TextView
                 android:id="@+id/m9"
                 android:layout_width="match_parent"
@@ -133,8 +140,9 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
                 android:text="EEU33C07 Digital Systems Design"
-                android:textSize="18sp"
-                android:textStyle="bold|italic" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+/>
             <TextView
                 android:id="@+id/m10"
                 android:layout_width="match_parent"
@@ -142,8 +150,9 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
                 android:text="EEU3E03 Probability and Statistics"
-                android:textSize="18sp"
-                android:textStyle="bold|italic" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+ />
 
             <TextView
                 android:id="@+id/m12"
@@ -152,8 +161,9 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
                 android:text="MAU33E01 Engineering Mathematics V"
-                android:textSize="18sp"
-                android:textStyle="bold|italic" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+ />
             <TextView
                 android:id="@+id/m13"
                 android:layout_width="match_parent"
@@ -162,7 +172,8 @@
                 android:gravity="center_vertical"
                 android:text="CSU33D04 Operating Systems and Concurrent Systems"
                 android:textSize="16sp"
-                android:textStyle="bold|italic" />
+                android:textStyle="bold"
+ />
 
         </LinearLayout>
     </ScrollView>
