--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -121,19 +121,21 @@
 
     <Button
         android:id="@+id/btnSolutions"
-        android:layout_width="109dp"
-        android:layout_height="47dp"
-        android:layout_below="@+id/Reminder"
-        android:layout_alignStart="@+id/Reminder"
-        android:layout_alignLeft="@+id/Reminder"
+        android:layout_width="wrap_content"
+        android:layout_height="10dp"
+        android:layout_below="@id/TeacherPage"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="-1dp"
-        android:layout_marginEnd="289dp"
-        android:layout_marginRight="289dp"
-        android:layout_marginBottom="460dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="300dp"
+        android:layout_marginRight="300dp"
+        android:layout_marginBottom="590dp"
+        android:minWidth="10dp"
+        android:minHeight="10dp"
         android:text="Solutions" />
 </RelativeLayout>
