--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/alreadyregistered"
+    android:id="@+id/Course"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SignIn">
@@ -178,24 +178,30 @@
         android:id="@+id/year"
         android:layout_width="136dp"
         android:layout_height="43dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginLeft="47dp"
         android:layout_marginTop="9dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginRight="46dp"
         android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toTopOf="@+id/SignInButton"
-        app:layout_constraintEnd_toStartOf="@+id/Course"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toStartOf="@+id/course"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/d_o_b" />
 
-    <TextView
-        android:id="@+id/Course"
+    <Spinner
+        android:id="@+id/course"
         android:layout_width="134dp"
         android:layout_height="43dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginLeft="46dp"
+
         android:layout_marginTop="9dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
         android:layout_marginBottom="2dp"
-        android:hint="Course Name"
         app:layout_constraintBottom_toTopOf="@+id/SignInButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/year"
         app:layout_constraintTop_toBottomOf="@+id/d_o_b"
         app:layout_constraintVertical_bias="0.0" />
