--- a/app/src/main/res/layout/activity_alarm_page.xml
+++ b/app/src/main/res/layout/activity_alarm_page.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/androidback"
     tools:context=".AlarmPage">
 
     <TextView
         android:id="@+id/head1"
-        android:layout_width="230dp"
-        android:layout_height="42dp"
+        android:layout_width="231dp"
+        android:layout_height="60dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/reminders"
         android:gravity="center"
-        android:text="My Reminders"
         android:textColor="#37993B"
         android:textSize="30sp"
         android:textStyle="bold"
