--- a/app/src/main/res/layout/reminder_row.xml
+++ b/app/src/main/res/layout/reminder_row.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:layout_margin="5dp"
     app:cardCornerRadius="2dp"
-    app:cardElevation="2dp">
+    app:cardElevation="2dp"
+    android:background="@drawable/remind">
+
 
     <ImageView
         android:id="@+id/imageView2"
@@ -19,13 +22,14 @@
 
     <TextView
         android:id="@+id/moduleTitle"
-        android:layout_width="257dp"
-        android:layout_height="40dp"
+        android:layout_width="256dp"
+        android:layout_height="46dp"
         android:layout_marginStart="57dp"
         android:layout_marginLeft="70dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="0dp"
         android:layout_marginRight="97dp"
+        android:background="@drawable/remind"
         android:text="CSU33D06 Software Design Analysis"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -74,4 +78,5 @@
         android:layout_marginLeft="320dp"
         android:layout_marginTop="37dp"
         app:srcCompat="@drawable/ic_delete" />
+
 </androidx.cardview.widget.CardView>
