Latest UI updates

--- a/app/src/main/res/layout/activity_module_list.xml
+++ b/app/src/main/res/layout/activity_module_list.xml
@@ -4,30 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/androidback"
     tools:context=".ModuleList">
 
     <TextView
         android:id="@+id/modulesTextView"
-        android:layout_width="404dp"
+        android:layout_width="365dp"
         android:layout_height="61dp"
-        android:layout_marginStart="186dp"
-        android:layout_marginLeft="186dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="97dp"
-        android:layout_marginRight="97dp"
-        android:background="#00DBB781"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/admin"
+
         android:clickable="false"
         android:gravity="center_horizontal|center_vertical"
         android:padding="4dp"
-        android:text="Admin's Modules"
         android:textSize="32sp"
         android:textStyle="bold"
         android:typeface="normal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.65"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Admin's Modules" />
+        tools:context="Admin's Modules" />
 
     <ListView
         android:id="@+id/modulesList"
@@ -40,6 +37,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/moduleb"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/modulesTextView" />
