--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -215,7 +215,7 @@
         app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/Modr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mod Reg." />
