--- a/app/src/main/res/layout/moduleselect.xml
+++ b/app/src/main/res/layout/moduleselect.xml
@@ -16,12 +16,18 @@
         >
 
     </ListView>
+
     <Button
         android:id="@+id/btshow"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="showSelectedItems"
-        android:text="Show selected Modules"
-        />
+        android:text="Show selected Modules" />
+
+    <Button
+        android:id="@+id/goback"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:text="Done" />
 
 </LinearLayout>
