--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -138,4 +138,26 @@
         android:minWidth="10dp"
         android:minHeight="10dp"
         android:text="Solutions" />
+
+
+    <Button
+        android:id="@+id/contact"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_below="@id/TeacherPage"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="300dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="590dp"
+        android:minWidth="10dp"
+        android:minHeight="10dp"
+        android:text="Contact Us" />
+
 </RelativeLayout>
