--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/alreadyregistered"
+    android:id="@+id/Course"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SignIn">
@@ -143,62 +143,48 @@
         android:layout_marginBottom="176dp"
         android:ems="10"
         android:hint="Date of Birth"
-        android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gen_1" />
 
     <Button
-        android:id="@+id/SignInButton"
-        android:layout_width="91dp"
-        android:layout_height="52dp"
-
-        android:layout_marginTop="8dp"
-        android:text="Register"
-        app:layout_constraintBottom_toTopOf="@+id/LoggingButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/year" />
-
-    <Button
         android:id="@+id/LoggingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
         android:layout_marginBottom="8dp"
         android:text="Already registered? Click here to log in."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SignInButton" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
         android:id="@+id/year"
         android:layout_width="136dp"
         android:layout_height="43dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginLeft="47dp"
         android:layout_marginTop="9dp"
-        android:layout_marginBottom="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/SignInButton"
-        app:layout_constraintEnd_toStartOf="@+id/Course"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginEnd="46dp"
+        android:layout_marginRight="46dp"
+        app:layout_constraintEnd_toStartOf="@+id/course"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/d_o_b" />
 
-    <TextView
-        android:id="@+id/Course"
+    <Spinner
+        android:id="@+id/course"
         android:layout_width="134dp"
         android:layout_height="43dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginLeft="46dp"
+
         android:layout_marginTop="9dp"
-        android:layout_marginBottom="2dp"
-        android:hint="Course Name"
-        app:layout_constraintBottom_toTopOf="@+id/SignInButton"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/year"
-        app:layout_constraintTop_toBottomOf="@+id/d_o_b"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/d_o_b" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -215,10 +201,17 @@
         app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 
     <Button
-        android:id="@+id/Modr"
+        android:id="@+id/SelectModuleBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mod Reg." />
+        android:layout_marginStart="152dp"
+        android:layout_marginLeft="152dp"
+        android:text="Register"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/LoggingButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/year"
+        app:layout_constraintVertical_bias="0.533" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
