--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -204,14 +204,22 @@
         android:id="@+id/SelectModuleBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
-        android:layout_marginLeft="152dp"
-        android:text="Register"
+        android:layout_marginStart="112dp"
+        android:layout_marginLeft="112dp"
+        android:text="Module Sel"
         android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/LoggingButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/year"
-        app:layout_constraintVertical_bias="0.533" />
+        app:layout_constraintVertical_bias="0.466" />
+
+    <Button
+        android:id="@+id/SignInButton"
+        android:layout_width="57dp"
+        android:layout_height="28dp"
+        android:text="Register"
+        tools:layout_editor_absoluteX="299dp"
+        tools:layout_editor_absoluteY="505dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
