--- a/app/src/main/res/layout/activity_modules_new_page.xml
+++ b/app/src/main/res/layout/activity_modules_new_page.xml
@@ -41,7 +41,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="Review"
-        app:layout_constraintBottom_toTopOf="@+id/TimetableBtn"
+        app:layout_constraintBottom_toTopOf="@+id/GradeAnalyticsBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lectureEmail" />
@@ -60,11 +60,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TimetableBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/GradeAnalyticsBtn" />
 
     <Button
-        android:id="@+id/TimetableBtn"
-        android:layout_width="145dp"
+        android:id="@+id/GradeAnalyticsBtn"
+        android:layout_width="wrap_content"
         android:layout_height="46dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -72,7 +72,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="timeTable"
+        android:text="Grade Analytics"
         app:layout_constraintBottom_toTopOf="@+id/AttendanceBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
