--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -215,11 +215,14 @@
 
     <Button
         android:id="@+id/SignInButton"
-        android:layout_width="57dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Register"
-        tools:layout_editor_absoluteX="299dp"
-        tools:layout_editor_absoluteY="505dp" />
+        app:layout_constraintBottom_toTopOf="@+id/LoggingButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintStart_toEndOf="@+id/SelectModuleBtn"
+        app:layout_constraintTop_toBottomOf="@+id/course" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
