Removed sign-up feature for now to help harsh implement select modules page third time

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -225,7 +225,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:text="Select Module"
+        android:text="Select Your Module"
         android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/LoggingButton"
         app:layout_constraintEnd_toStartOf="@+id/SignInButton"
