--- a/app/src/main/res/layout/moduleselect.xml
+++ b/app/src/main/res/layout/moduleselect.xml
@@ -30,4 +30,15 @@
         android:layout_height="wrap_content"
         android:text="Done" />
 
+    <Spinner
+        android:id="@+id/year"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Spinner
+        android:id="@+id/course"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
 </LinearLayout>
