--- a/app/src/main/res/layout/activity_grade_analytics.xml
+++ b/app/src/main/res/layout/activity_grade_analytics.xml
@@ -79,7 +79,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:gravity="center"
-        android:text="60%"
+        android:text="N/A"
         android:textColor="#D81B60"
         android:textSize="50sp"
         android:textStyle="bold"
@@ -94,7 +94,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:gravity="center"
-        android:text="10"
+        android:text="N/A"
         android:textColor="#D81B60"
         android:textSize="50sp"
         android:textStyle="bold"
