CREATED THE SMILEY RATING BAR IN STUDENT SOLUTIONS PAGE

--- a/app/src/main/res/layout/activity_solutions_download.xml
+++ b/app/src/main/res/layout/activity_solutions_download.xml
@@ -11,14 +11,16 @@
     <ListView
 
         android:id="@+id/myListView"
-        android:layout_width="410dp"
-        android:layout_height="490dp"
-        android:layout_marginTop="5dp"
+        android:layout_width="414dp"
+        android:layout_height="277dp"
+        android:layout_marginBottom="270dp"
         android:padding="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/backBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/head">
+
 
     </ListView>
 
@@ -39,17 +41,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/backBtn"
-        android:layout_width="104dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="9dp"
-        android:text="Back"
+    <com.hsalf.smileyrating.SmileyRating
+        android:id="@+id/smile_rating"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="375dp"
+        android:layout_marginBottom="143dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myListView" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/backBtn"
+        android:layout_width="104dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="516dp"
+        android:layout_marginBottom="42dp"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
