--- a/app/src/main/res/layout/moduleselect.xml
+++ b/app/src/main/res/layout/moduleselect.xml
@@ -1,62 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/title"
     android:layout_width="match_parent"
 
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
-
-
 
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Select Module for Registration" />
+        android:layout_width="338dp"
+        android:layout_height="35dp"
+        android:text="Select Module for Registration"
+        android:textColor="#FA000000"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/classSpinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/classSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:entries="@array/items_class"/>
+        android:layout_width="295dp"
+        android:layout_height="19dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:entries="@array/items_class"
+        app:layout_constraintBottom_toTopOf="@+id/divSpinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
 
     <Spinner
         android:id="@+id/divSpinner"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/classSpinner"
+        android:layout_width="295dp"
+        android:layout_height="19dp"
 
-        android:layout_toLeftOf="@id/classSpinner"
-        android:layout_marginTop="10dp"
-        />
-
+        android:layout_marginStart="58dp"
+        android:layout_marginLeft="58dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="62dp"
+        android:layout_marginRight="62dp"
+        android:layout_marginBottom="8dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/checkable_list"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/classSpinner" />
 
     <ListView
         android:id="@+id/checkable_list"
-        android:layout_width="fill_parent"
-        android:layout_height="308dp">
+        android:layout_width="355dp"
+        android:layout_height="396dp"
+        android:layout_marginBottom="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divSpinner">
 
     </ListView>
 
     <Button
-        android:id="@+id/btshow"
-        android:layout_width="139dp"
-        android:layout_height="56dp"
-        android:onClick="showSelectedItems"
-        android:text="Show selected Modules" />
-
-    <Button
         android:id="@+id/goback"
-        android:layout_width="137dp"
-        android:layout_height="46dp"
-        android:text="Done" />
+        android:layout_width="210dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginBottom="27dp"
+        android:text="Finish Registration"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkable_list" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
