--- a/app/src/main/res/layout/activity_teacher_login.xml
+++ b/app/src/main/res/layout/activity_teacher_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/loginbackground"
     tools:context=".TeacherLogin">
 
     <EditText
@@ -13,6 +14,7 @@
         android:layout_marginTop="175dp"
         android:ems="10"
         android:hint="E-mail Address"
+        android:background="#FFFFFF"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -26,6 +28,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Password"
+        android:background="#FFFFFF"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -34,11 +37,11 @@
 
     <Button
         android:id="@+id/TeacherLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="86dp"
+        android:layout_height="38dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="250dp"
-        android:text="Login"
+        android:background="@drawable/login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -53,7 +56,7 @@
         android:layout_marginBottom="63dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Teacher's Login"
+        android:background="@drawable/teachers"
         android:textColor="#009688"
         android:textColorHighlight="#00FFFFFF"
         android:textSize="32sp"
